[gd_scene load_steps=3 format=3 uid="uid://cn4jmsu3ifyb"]

[ext_resource type="Script" uid="uid://bct0rh122rqc2" path="res://scripts/player_inventory.gd" id="1_dmp4w"]
[ext_resource type="Texture2D" uid="uid://dhnta2neerv8p" path="res://assets/sprites/background/background_filling_sheet.png" id="2_xrurq"]

[node name="PlayerInventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmp4w")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 572.0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="StatsMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -149.0
offset_right = 251.0
offset_bottom = 151.0
grow_vertical = 2
texture = ExtResource("2_xrurq")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="StatsMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="StatsMenu/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="StatsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "HP  :"

[node name="HealthLabel" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "99"

[node name="HBoxContainer2" type="HBoxContainer" parent="StatsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "ATK:"

[node name="AttackLabel" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "99"

[node name="HBoxContainer3" type="HBoxContainer" parent="StatsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "SPD:"

[node name="SpeedLabel" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "99"
